WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
207801
Log WebSocket failure in case of network crash
https://bugs.webkit.org/show_bug.cgi?id=207801
Summary
Log WebSocket failure in case of network crash
youenn fablet
Reported
2020-02-14 17:22:09 PST
Log WebSocket failure in case of network crash
Attachments
Patch
(1.77 KB, patch)
2020-02-14 17:23 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2020-02-14 17:23:56 PST
Created
attachment 390840
[details]
Patch
WebKit Commit Bot
Comment 2
2020-02-16 18:11:47 PST
Comment on
attachment 390840
[details]
Patch Clearing flags on attachment: 390840 Committed
r256719
: <
https://trac.webkit.org/changeset/256719
>
WebKit Commit Bot
Comment 3
2020-02-16 18:11:48 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2020-02-16 18:12:12 PST
<
rdar://problem/59498358
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug