Log WebSocket failure in case of network crash https://bugs.webkit.org/show_bug.cgi?id=207801

Reviewed by Darin Adler.

Covered by http/tests/websocket/tests/hybi/network-process-crash-error.html.

* WebProcess/Network/WebSocketChannel.cpp:
(WebKit::WebSocketChannel::didReceiveMessageError):
(WebKit::WebSocketChannel::networkProcessCrashed):
Add a console log message in case of error coming from network process.


Canonical link: https://commits.webkit.org/220787@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256719 268f45cc-cd09-0410-ab3c-d52691b4dbfc